--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,31 +1,31 @@
 <header class="site-header">
   <div class="section">
-    <div class="group">
-
-      <div class="span1-4 header-left">
+    <nav class="group main-nav">
+      <div class="span1-3 main-nav-left">
+        <div class="cornerstone">
+          <img src="/100-years"
+            alt="100 years of service"
+            title="Linek Plumbing is celebrating 100 years of service" />
+        </div>
+        <div class="main-nav-left">
+          {% include nav_item.html title='Services' url='services' %}
+          {% include nav_item.html title='History' url='history' %}
+        </div>
+      </div>
+      <div class="span1-3 main-nav-center">
         <a href="{{ site.baseurl }}/">
           Logo
         </a>
       </div>
-
-      <div class="span3-4 header-right">
-        <nav class="site-nav">
-          <a href="#" class="menu-icon">
-            Menu
-          </a>
-          <div class="trigger">
-            <a class="page-link{% if page.url == "/" or page.url == '' %} active{% endif %}" href="/">
-              Home
-            </a>
-            {% for my_page in site.pages %}
-              {% if my_page.title %}
-                <a class="page-link{% if my_page.url == page.url %} active{% endif %}" href="{{ my_page.url | prepend: site.baseurl }}">{{ my_page.title }}</a>
-              {% endif %}
-            {% endfor %}
-          </div>
-        </nav>
+      <div class="span1-3 main-nav-right">
+        <div class="cornerstone">
+          <a href="tel:+3149620956">314-962-0956</a>
+        </div>
+        <div class="main-nav-right">
+          {% include nav_item.html title='About' url='about' %}
+          {% include nav_item.html title='Contact' url='contact' %}
+        </div>
       </div>
-
-    </div>
+    </nav>
   </div>
 </header>
