--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,6 +11,8 @@
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
 
+  <script src="https://use.typekit.net/tkw0sqt.js"></script>
+  <script>try{Typekit.load({ async: true });}catch(e){}</script>
   <!--[if lt IE 9]>
     <script src="/dist/html5shiv.js"></script>
   <![endif]-->
