--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1,5 +1,5 @@
 
-/* Reset basic elements */
+// Basic resets
 body, h1, h2, h3, h4, h5, h6,
 p, blockquote, pre, hr,
 dl, dd, ol, ul, figure {
@@ -7,7 +7,7 @@ margin: 0;
 padding: 0;
 }
 
-/* Basic body styling */
+// Basic body styles
 body {
   font: $base-font-weight #{$base-font-size}/#{$base-line-height} $base-font-family;
   color: $text-color;
@@ -15,12 +15,11 @@ body {
   -webkit-text-size-adjust: 100%;
   -webkit-font-feature-settings: "kern" 1;
   -moz-font-feature-settings: "kern" 1;
-  -o-font-feature-settings: "kern" 1;
   font-feature-settings: "kern" 1;
   font-kerning: normal;
 }
 
-/* Set `margin-bottom` to maintain vertical rhythm */
+// Set `margin-bottom` (to maintain vertical rhythm)
 h1, h2, h3, h4, h5, h6,
 p, blockquote, pre,
 ul, ol, dl, figure,
@@ -28,14 +27,14 @@ ul, ol, dl, figure,
   margin-bottom: $spacing-unit / 2;
 }
 
-/* Images */
+// Images
 img {
   box-sizing: border-box;
   max-width: 100%;
   vertical-align: middle;
 }
 
-/* Figures */
+// Figures
 figure > img {
   display: block;
   box-sizing: border-box;
@@ -45,7 +44,7 @@ figcaption {
   font-size: $small-font-size;
 }
 
-/* Lists */
+// Lists
 ul,
 ol {
   margin-left: $spacing-unit;
@@ -58,8 +57,9 @@ li {
   }
 }
 
-/* Headings */
+// Headings
 h1, h2, h3, h4, h5, h6 {
+  font-family: $headline-font-family;
   font-weight: $base-font-weight;
 }
 
@@ -67,7 +67,7 @@ h1, h2, h3, h4, h5, h6 {
   font-size: $small-font-size;
 }
 
-/* Links */
+// Links
 a {
   color: $blue;
   text-decoration: none;
@@ -82,7 +82,7 @@ a {
   }
 }
 
-/* Clearfix */
+// Clearfix
 %clearfix {
   &:after {
     content: "";
@@ -91,7 +91,7 @@ a {
   }
 }
 
-/* Wrapper */
+// Wrapper
 .wrapper {
   width: 100%;
   @extend %clearfix;
