--- a/css/main.scss
+++ b/css/main.scss
@@ -3,26 +3,35 @@
 ---
 @charset "utf-8";
 
-// Our variables
-$base-font-family: 'Source Sans Pro', sans-serif;
+// Variables
+
+// Colors
+$blue:        #005293;
+$darkBlue:    #324351;
+$brightBlue:  #1687E0;
+
+$gold:        #EDAA0B;
+$darkGold:    #D68101;
+
+$white:       #ffffff;
+$grey:        #848E97;
+
+// Fonts
+$base-font-family: 'Source Sans Pro', sans-serif; // Google
 $base-font-size:   16px;
 $base-font-weight: 400;
-$small-font-size:  $base-font-size * 0.875;
 $base-line-height: 1.5;
 
+$headline-font-family: "bebas-neue",sans-serif; // Typekit
+
+$small-font-size:  $base-font-size * 0.875;
+
+$regular:          400;
 $bold:             700;
 
 $spacing-unit:     30px;
 
-$text-color:       #324351;
-$white:            #FFFFFF;
-$light-grey:       #F9FAFB;
-
-$blue:             #005293;
-$bright-blue:      #1687E0;
-$gold:             #EDAA0B;
-$dark-gold:        #D68101;
-
+// Breakpoints
 $breakpoint-mobile:        480px;
 $breakpoint-tablet:        768px;
 $breakpoint-desktop:       1040px;
