Use configurable phone number

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,7 +19,7 @@
       </div>
       <div class="span1-3 main-nav-right">
         <div class="cornerstone">
-          <a href="tel:+3149620956">314-962-0956</a>
+          <a href="tel:+{{ site.phone }}">{{ site.phone }}</a>
         </div>
         <div class="main-nav-right">
           {% include nav_item.html title='About' url='about' %}
