Add required footer content

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,17 +2,15 @@
 <!-- Site Footer -->
 
 <footer id="site-footer">
-  <div class="span1-2 payment-methods">
-    <div class="span1-2">
+  <div class="group">
+    <div class="span1-2 payment-methods">
+      We accept cash, check, and all major credit cards.
       <i class="icon-square"></i>
+      Check or cash preferred. Credit card payments will incur processing fees.
     </div>
     <div class="span1-2">
-      <i class="icon-square"></i>
-  </div>
-  <div class="span1-2">
-    <div class="desktoptel">314-962-0956</div>
-    <div class="mobiletel">
-      <a href="tel:1-314-962-0956">314-962-0956</a>
+      <a href="tel:+{{ site.phone }}">{{ site.phone }}</a>
+      &copy; 2016 Linek Plumbing Company
     </div>
   </div>
 </footer>
