--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -10,7 +10,7 @@ padding: 0;
 // Basic body styles
 body {
   font: $base-font-weight #{$base-font-size}/#{$base-line-height} $base-font-family;
-  color: $text-color;
+  color: $darkBlue;
   background-color: $white;
   -webkit-text-size-adjust: 100%;
   -webkit-font-feature-settings: "kern" 1;
@@ -77,7 +77,7 @@ a {
   }
 
   &:hover {
-    color: $text-color;
+    color: $darkBlue;
     text-decoration: underline;
   }
 }
