Link homepage and layout images

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
     <nav class="group main-nav">
       <div class="span1-3 main-nav-left">
         <div class="cornerstone">
-          <img src="/100-years"
+          <img src="/images/100-seal.png"
             alt="100 years of service"
             title="Linek Plumbing is celebrating 100 years of service" />
         </div>
@@ -14,7 +14,7 @@
       </div>
       <div class="span1-3 main-nav-center">
         <a href="{{ site.baseurl }}/">
-          Logo
+          <img src="/images/logo.svg" alt="Linek Plumbing Logo" title="Linek Plumbing" />
         </a>
       </div>
       <div class="span1-3 main-nav-right">
