--- a/_includes/services_overview.html
+++ b/_includes/services_overview.html
@@ -6,27 +6,27 @@
 
   <div class="group">
     <div class="span1-3">
-      <img src="/images/repairs.png" alt="Repairs" title="Repairs" />
+      <img src="/images/service-icons/repairs.png" alt="Repairs" title="Repairs" />
       Repairs
     </div>
     <div class="span1-3">
-      <img src="/images/remodeling.png" alt="Remodeling" title="Remodeling" />
+      <img src="/images/service-icons/remodeling.png" alt="Remodeling" title="Remodeling" />
       Remodeling
     </div>
     <div class="span1-3">
-      <img src="/images/water-heaters.png" alt="Water Heaters" title="Water Heaters" />
+      <img src="/images/service-icons/water-heaters.png" alt="Water Heaters" title="Water Heaters" />
       Water Heaters
     </div>
     <div class="span1-3">
-      <img src="/images/water-service-repairs.png" alt="Water Service Repairs" title="Water Service Repairs" />
+      <img src="/images/service-icons/service-repairs.png" alt="Water Service Repairs" title="Water Service Repairs" />
       Water Service Repairs
     </div>
     <div class="span1-3">
-      <img src="/images/backflow-preveters.png" alt="Backflow Preventers" title="Backflow Preventers" />
+      <img src="/images/service-icons/backflow.png" alt="Backflow Preventers" title="Backflow Preventers" />
       Backflow Preventers
     </div>
     <div class="span1-3">
-      <img src="/images/sewer-drain-cleaning-repairs.png" alt="Sewer Drain Cleaning Repairs" title="Sewer Drain Cleaning Repairs" />
+      <img src="/images/service-icons/sewer-drain.png" alt="Sewer Drain Cleaning Repairs" title="Sewer Drain Cleaning Repairs" />
       Sewer &amp; Drain Cleaning &amp; Repairs
     </div>
   </div>
