Refine nav styling

--- a/css/main.scss
+++ b/css/main.scss
@@ -15,6 +15,7 @@ $darkGold:    #D68101;
 
 $white:       #ffffff;
 $grey:        #848E97;
+$dark-grey:   #333;
 
 // Fonts
 $base-font-family: 'Source Sans Pro', sans-serif; // Google
