--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1,10 +1,13 @@
+* {
+  box-sizing: border-box;
+}
 
 // Basic resets
 body, h1, h2, h3, h4, h5, h6,
 p, blockquote, pre, hr,
 dl, dd, ol, ul, figure {
-margin: 0;
-padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 // Basic body styles
@@ -37,7 +40,6 @@ img {
 // Figures
 figure > img {
   display: block;
-  box-sizing: border-box;
 }
 
 figcaption {
