Lightly styled contact and why choose us sections

--- a/_includes/contact_form.html
+++ b/_includes/contact_form.html
@@ -1,15 +1,19 @@
 <form class="contact-form">
+  <hgroup>
+    <h2>Send us a message</h2>
+  </hgroup>
+
   <div class="field">
     <label for="contact-name">Name</label>
     <input type="text" id="contact-name" name="name" />
   </div>
   <div class="field">
     <label for="contact-phone">Phone</label>
-    <input type="text" id="contact-phone" name="phone" />
+    <input type="tel" id="contact-phone" name="phone" />
   </div>
   <div class="field">
     <label for="contact-message">Message</label>
-    <textatea id="contact-message" name="message"></textarea>
+    <textarea id="contact-message" name="message"></textarea>
   </div>
   <input type="submit" value="Submit" />
 </form>
