--- a/css/main.scss
+++ b/css/main.scss
@@ -31,6 +31,7 @@ $regular:          400;
 $bold:             700;
 
 $spacing-unit:     30px;
+$max-width:        1440px;
 
 // Breakpoints
 $breakpoint-mobile:        480px;
