--- a/_includes/why_choose_us.html
+++ b/_includes/why_choose_us.html
@@ -1,24 +1,32 @@
-<div class="choose-us-wrapper">
+<div class="choose-us-wrapper bg-dark-blue">
   <hgroup>
     <h1>Why Choose Us?</h1>
   </hgroup>
 
   <ul class="group">
-    <li class="span1-3 choose-us-bubble">
-      Quality Workmanship
+    <li class="span1-3">
+      <div class="choose-us-bubble">
+        <h3>Quality Workmanship</h3>
+      </div>
     </li>
-    <li class="span1-3 choose-us-bubble">
-      Satisfied Customers
+    <li class="span1-3">
+      <div class="choose-us-bubble">
+        <h3>Satisfied Customers</h3>
+      </div>
     </li>
-    <li class="span1-3 choose-us-bubble">
-      Friendly Service
+    <li class="span1-3">
+      <div class="choose-us-bubble">
+        <h3>Friendly Service</h3>
+      </div>
     </li>
   </ul>
 
-  <footer class="choose-us-footer">
-    <p>
-      If you need a repair, we’ll often have you send us a picture of the issue.<br />
-      That way, we can try to match the parts we’ll need in order to fix the issue without a second trip.
-    </p>
+  <footer class="choose-us-footer group">
+    <div class="span1-1">
+      <p>
+        If you need a repair, we’ll often have you send us a picture of the issue.<br />
+        That way, we can try to match the parts we’ll need in order to fix the issue without a second trip.
+      </p>
+    </div>
   </footer>
 </div>
