--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -65,6 +65,21 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: $base-font-weight;
 }
 
+h1 {
+  font-size: 5em;
+}
+
+h2 {
+  font-size: 3em;
+}
+
+h3 {
+  font-family: $base-font-family;
+  font-size: 2em;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+
 .small {
   font-size: $small-font-size;
 }
@@ -100,5 +115,9 @@ a {
 }
 
 .bg-dark-blue {
-    background: #005293;
+  background: #005293;
+}
+
+.text-center {
+  text-align: center;
 }
