--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -6,7 +6,7 @@ h1 {
 }
 
 .hero {
-  height: 500px;
+  height: 700px;
 }
 
 .residential-hero,
@@ -36,15 +36,124 @@ h1 {
 
   h1 {
     color: $white;
-    font-size: 5em;
     border-bottom: 2px solid $white;
     padding-bottom: 4px;
     display: inline-block;
     line-height: 1em;
     margin-bottom: 1em;
   }
+}
 
-  .button {
+.services-wrapper {
+  background: $white;
+  box-shadow: 0 6px 6px -2px rgba(0, 0, 0, .2);
+  margin: 0 auto;
+  margin-top: -100px;
+  max-width: $max-width;
+  position: relative;
+  z-index: 1;
 
+  h2 {
+    font-family: $base-font-family;
+    font-size: 1.5em;
+  }
+
+  hgroup {
+    margin-bottom: 2em;
+    text-align: center;
+  }
+}
+
+.service-cell {
+  margin: 0;
+  padding: 2%;
+  position: relative;
+  text-align: center;
+  width: 33%;
+
+  &:not(:first-child):before {
+    border-left: 1px solid $grey;
+    bottom: 10%;
+    content: '';
+    display: block;
+    left: 0;
+    position: absolute;
+    top: 10%;
+  }
+
+  &.with-divider:after {
+    border-bottom: 1px solid $grey;
+    bottom: 0;
+    content: '';
+    left: 10%;
+    position: absolute;
+    right: 10%;
+  }
+}
+
+.choose-us-wrapper {
+  position: relative;
+  color: $white;
+  padding-top: 8em;
+  padding-bottom: 5em;
+
+  h1 {
+    background: $brightBlue;
+    color: $white;
+    font-size: 6em;
+    left: 50%;
+    line-height: 1;
+    padding: .2em 1em;
+    position: absolute;
+    top: -.75em;
+    transform: translateX(-50%);
+  }
+
+  ul {
+    list-style: none;
+  }
+
+  li {
+    text-align: center;
+  }
+}
+
+.choose-us-bubble {
+  border-radius: 145px;
+  border: 4px solid $gold;
+  height: 280px;
+  text-align: center;
+  width: 280px;
+  position: relative;
+  display: inline-block;
+
+  h3 {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 140%;
+    color: white;
+    transform: translate(-50%, -50%);
+    background: #005293;
+    padding: 1em;
+    font-size: 2em;
+  }
+}
+
+.choose-us-footer {
+  color: $white;
+  font-size: 1.25em;
+  padding-top: 2em;
+  text-align: center;
+}
+
+.home-contact-section {
+  .contact-form {
+    background: #eee;
+    border-radius: 5px;
+    padding: 1em;
+    margin-top: 6em;
+    margin-bottom: 4em;
+    box-shadow: 0 6px 6px -3px rgba(0, 0, 0, .1);
   }
 }
