--- a/css/main.scss
+++ b/css/main.scss
@@ -32,6 +32,7 @@ $bold:             700;
 
 $spacing-unit:     30px;
 $max-width:        1440px;
+$nav-height:       160px;
 
 // Breakpoints
 $breakpoint-mobile:        480px;
