--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -67,6 +67,7 @@ h1, h2, h3, h4, h5, h6 {
 
 h1 {
   font-size: 5em;
+  color: $blue;
 }
 
 h2 {
@@ -78,6 +79,11 @@ h3 {
   font-size: 2em;
   font-weight: bold;
   text-transform: uppercase;
+}
+
+p {
+  font-size: 1.25em;
+  margin-bottom: 1em;
 }
 
 .small {
@@ -118,6 +124,14 @@ a {
   background: #005293;
 }
 
-.text-center {
-  text-align: center;
+.text-center { text-align: center; }
+
+.bright-blue-color {
+  color: $brightBlue;
+  font-weight: 300;
+
+  &.underline {
+    border-bottom: 2px solid $brightBlue;
+    padding-bottom: 4px;
+  }
 }
