Overall style fixes

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,12 +3,15 @@
 
 <footer id="site-footer">
   <div class="group">
-    <div class="span1-2 payment-methods">
+    <div class="span1-3 payment-methods">
       We accept cash, check, and all major credit cards.
       <i class="icon-square"></i>
       Check or cash preferred. Credit card payments will incur processing fees.
     </div>
-    <div class="span1-2">
+    <div class="span1-3 licensing">
+      Licensed, Bonded, and Insured.
+    </div>
+    <div class="span1-3 copyright">
       <a href="tel:+{{ site.phone }}">{{ site.phone }}</a>
       &copy; 2016 Linek Plumbing Company
     </div>
