--- a/_includes/services_overview.html
+++ b/_includes/services_overview.html
@@ -2,7 +2,7 @@
   <div class="group">
     <hgroup class="span1-1">
       <h1>Services</h1>
-      <h2>For all jobs, big and small, you can count on Linek Plumbing to provide high quality work at a fair price.</h2>
+      <p>For all jobs, big and small, you can count on Linek Plumbing to provide high quality work at a fair price.</p>
     </hgroup>
   </div>
 
