--- a/_includes/why_choose_us.html
+++ b/_includes/why_choose_us.html
@@ -16,7 +16,7 @@
     </li>
     <li class="span1-3">
       <div class="choose-us-bubble">
-        <h3>Friendly Service</h3>
+        <h3>Friendly<br/>Service</h3>
       </div>
     </li>
   </ul>
