--- a/_sass/_nav.scss
+++ b/_sass/_nav.scss
@@ -1,65 +1,99 @@
-.main-nav {
-  font-size: 21px;
+
+.main-nav-bar {
+  font-size: 18px;
   height: $nav-height;
   position: relative;
-  z-index: 1;
-}
-
-.main-nav-cornerstone {
-  height: 100px;
-  position: relative;
-}
-
-.main-nav-center {
+  z-index: 5;
   height: 160px;
-  position: relative;
 }
 
-.main-nav-side {
-  a {
-    color: $dark-grey;
-    float: left;
-    font-size: 1em;
-    font-weight: bold;
-    margin: 0 3%;
-    max-width: 130px;
-    padding: 15px 0;
-    text-align: center;
-    text-transform: uppercase;
-    width: 40%;
-  }
-}
-
-.main-nav-right {
-  a {
-    float: right;
-  }
-}
-
-.main-nav-logo {
-  bottom: -80px;
+.top-nav {
+  width: 100%;
   display: block;
-  left: 50%;
-  position: absolute;
-  transform: translateX(-50%);
-  width: 400px;
-
-  img {
-    width: 400px;
-  }
+  height: 100px;
 }
 
-.main-nav-phone {
+.top-nav-left,
+.top-nav-right {
+  float: left;
+  width: 50%;
+  margin: 0;
+  height: 100%;
+}
+
+.service-seal {
+  transform: rotate(-15deg);
+  width: 200px;
+}
+.top-nav-right {
+  text-align: right;
+}
+.top-nav-phone {
   color: $gold;
   float: right;
   font-size: 2em;
   font-weight: bold;
+  padding-top: .5em;
+  margin-right: 2%;
+  &:hover {
+    color: $gold;
+    text-decoration: none;
+  }
 }
 
-.service-seal {
-  bottom: 0;
-  left: -10%;
+.main-nav-items {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  height: 60px;
+  li {
+    margin: 0 1%;
+    float: left;
+    text-align: center;
+    width: 15.5%;
+    a {
+      border-bottom: 2px solid transparent;
+      color: $darkGrey;
+      font-size: 1.2em;
+      font-weight: bold;
+      padding: 5px 0;
+      text-decoration: none;
+      text-transform: uppercase;
+      &:hover {
+        border-bottom: 2px solid $gold;
+      }
+    }
+  }
+}
+
+.main-nav-items li:nth-of-type(3) {
+  margin-left: 31%;
+}
+
+.main-nav-logo {
+  bottom: -50px;
+  display: block;
+  left: 50%;
   position: absolute;
-  transform: rotate(-15deg);
-  width: 200px;
+  transform: translateX(-50%);
+  width: 30%;
+  img {
+    width: 100%;
+  }
+}
+
+
+@media screen and (max-width: 900px) {
+  .main-nav-logo {
+    bottom: 100%;
+  }
+
+  .main-nav-items li:nth-of-type(3) {
+    margin-left: 1%;
+  }
+
+  .main-nav-items {
+    width: 600px;
+    position: relative;
+  }
 }
