--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -62,7 +62,7 @@ li {
 // Headings
 h1, h2, h3, h4, h5, h6 {
   font-family: $headline-font-family;
-  font-weight: $base-font-weight;
+  font-weight: bold;
 }
 
 h1 {
@@ -82,7 +82,7 @@ h3 {
 }
 
 p {
-  font-size: 1.25em;
+  font-size: 1em;
   margin-bottom: 1em;
 }
 
