--- a/css/main.scss
+++ b/css/main.scss
@@ -3,7 +3,28 @@
 ---
 @charset "utf-8";
 
-// Variables
+// @font-face
+@font-face {
+  font-family: 'bebas-neue';
+  src: url('/fonts/bebas/bebasneue_bold.eot'); /* IE9 Compat Modes */
+  src: url('/fonts/bebas/bebasneue_bold.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('/fonts/bebas/bebasneue_bold.woff2') format('woff2'),
+       url('/fonts/bebas/bebasneue_bold.woff') format('woff'),
+       url('/fonts/bebas/bebasneue_bold.ttf') format('truetype');
+  font-weight: bold;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'bebas-neue';
+  src: url('/fonts/bebas/bebasneue_regular.eot'); /* IE9 Compat Modes */
+  src: url('/fonts/bebas/bebasneue_regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('/fonts/bebas/bebasneue_regular.woff2') format('woff2'),
+       url('/fonts/bebas/bebasneue_regular.woff') format('woff'),
+       url('/fonts/bebas/bebasneue_regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
 
 // Colors
 $blue:        #005293;
@@ -23,7 +44,7 @@ $base-font-size:   16px;
 $base-font-weight: 400;
 $base-line-height: 1.5;
 
-$headline-font-family: "bebas-neue",sans-serif; // Typekit
+$headline-font-family: "bebas-neue",sans-serif;
 
 $small-font-size:  $base-font-size * 0.875;
 
@@ -81,3 +102,4 @@ $breakpoint-desktop:       1040px;
 @import "page";
 @import "form";
 @import "nav";
+// @import "sidr";
