Polishing sticky nav

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,9 +3,9 @@
     <nav class="group main-nav-bar">
       <div class="top-nav">
         <div class="top-nav-left">
-          <img src="/images/100-seal.png"
+          <img src="/images/banner.png"
             alt="100 years of service"
-            class="service-seal"
+            class="banner"
             title="Linek Plumbing is celebrating 100 years of service" />
         </div>
         <div class="top-nav-right">
