--- a/_includes/contact_form.html
+++ b/_includes/contact_form.html
@@ -15,5 +15,5 @@
     <label for="contact-message">Message</label>
     <textarea id="contact-message" name="message"></textarea>
   </div>
-  <input type="submit" value="Submit" />
+  <input class="button" type="submit" value="Submit" />
 </form>
