--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,16 +4,33 @@
 <footer id="site-footer">
   <div class="group">
     <div class="span1-3 payment-methods">
-      We accept cash, check, and all major credit cards.
-      <i class="icon-square"></i>
-      Check or cash preferred. Credit card payments will incur processing fees.
+      <p class="small">We accept cash, check, and all major credit cards.</p>
+      <img src="/images/payments.png" class="payments"/>
     </div>
     <div class="span1-3 licensing">
-      Licensed, Bonded, and Insured.
+      <h5>Licensed, Bonded, and Insured.</h5>
     </div>
-    <div class="span1-3 copyright">
-      <a href="tel:+{{ site.phone }}">{{ site.phone }}</a>
-      &copy; 2016 Linek Plumbing Company
+    <div class="span1-3 footer-phone">
+      <div class="desktoptel">
+        {{ site.phone }}
+      </div>
+      <div class="mobiletel">
+        <a href="tel:+{{ site.phone }}">{{ site.phone }}</a>
+      </div>
+    </div>
+  </div>
+  <div class="group sub-footer">
+    <div class="span1-2">
+      <p class="extra-small">Check or cash preferred. Credit card payments will incur standard processing fees.</p>
+    </div>
+    <div class="span1-2">
+      <p class="copyright">
+        &copy;
+        <script type="text/javascript">
+          document.write(new Date().getFullYear());
+        </script>
+        Linek Plumbing Company
+      </p>
     </div>
   </div>
 </footer>
