--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -3,19 +3,51 @@
 #site-footer {
   background: $blue;
   color: $white;
-  height: 144px;
-  padding: 2em;
+  padding: 2em 0 0;
 }
 
 .payment-methods {
-  i { font-size: 1.5em; }
-  .icon-square { font-size: 2em; }
+  .payments {
+    width: 90%;
+  }
 }
 
+.licensing {
+  font-size: 1.25em;
+  text-transform: uppercase;
+  h5 {
+    width: 100%;
+    text-align: center;
+  }
+}
+
+.footer-phone {
+  width: 100%;
+  text-align: right;
+  margin-right: 0!important;
+  .desktoptel {
+    color: $gold;
+    font-size: 2em;
+    font-weight: bold;
+    letter-spacing: 1px;
+  }
+}
 
 .desktoptel { display: block; }
 .mobiletel { display: none; }
+
 @include media-query($breakpoint-mobile) {
     .desktoptel { display: none; }
     .mobiletel { display: block; }
+}
+
+
+.sub-footer {
+  font-size: .75em;
+  p { margin-top: 2em; }
+}
+
+.copyright {
+  width: 100%;
+  text-align: right;
 }
