--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -1,13 +1,68 @@
 // Pages
-// .page-wrapper {
-//   max-width: 1100px;
-//   margin: .5em auto;
-// }
-//
-// .page-heading {
-//   margin-top: 2em;
-//
-//   h1 {
-//     color: $royal;
-//   }
-// }
+
+// Header (50/50) -------------------------------------
+.page-header {
+  background: darken($blue, 10%);
+  color: $white;
+  height: auto;
+  margin: 0 auto;
+  width: 100%;
+  @extend %clearfix;
+
+  .span1-2 {
+    width: 50%;
+    margin: 0;
+  }
+
+  .left-header {
+    padding: 2em 5%;
+  }
+  h1 { color: $white; }
+}
+
+// Overlay Stripe -------------------------------------
+.stripe-bg {
+  background: $blue;
+  position: relative;
+  height: 550px;
+}
+.overlay-wrapper {
+  @include box-shadow(0px, 3px, 10px, $darkGrey);
+  background: $white;
+  height: 600px;
+  left: 12.5%;
+  margin: 0 auto;
+  max-width: $max-width;
+  padding-top: 2em;
+  position: absolute;
+  top: -25px;
+  width: 75%;
+  z-index: 1;
+  hgroup {
+    margin-bottom: 2em;
+    text-align: center;
+    h1 {
+      font-weight: normal;
+    }
+  }
+}
+
+// Column Section -------------------------------------
+.column-section {
+  margin: 6em 0 4em;
+  h1, p { text-align: center;}
+  .brand {
+    padding: 3em;
+    text-align: center;
+    font-size: 1.5em;
+    text-transform: uppercase;
+  }
+}
+
+// Service Areas -------------------------------------
+.service-areas {
+  margin-bottom: 4em;
+  .map {
+    padding: 2em 0;
+  }
+}
