Logo link, camera and text, etc.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,7 +13,7 @@
         </div>
       </div>
       <div class="logo">
-        <a href="{{ site.baseurl }}/" class="main-nav-logo">
+        <a href="{{ site.baseurl }}" class="main-nav-logo">
           <img src="/images/logo.svg" alt="Linek Plumbing Logo" title="Linek Plumbing" />
         </a>
       </div>
