--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -58,6 +58,9 @@
     text-transform: uppercase;
   }
 }
+.history-section {
+  margin: 6em 0 4em;
+}
 
 // Service Areas -------------------------------------
 .service-areas {
