--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,10 +5,15 @@
   <div class="group">
     <div class="span1-3 payment-methods">
       <p class="small">We accept cash, check, and all major credit cards.</p>
-      <img src="/images/payments.png" class="payments"/>
+      <div class="credit-cards">
+        <i class="icon-cc-mastercard"></i>
+        <i class="icon-cc-visa"></i>
+        <i class="icon-cc-discover"></i>
+        <i class="icon-cc-amex"></i>
+      </div>
     </div>
     <div class="span1-3 licensing">
-      <h5>Licensed, Bonded, and Insured.</h5>
+      <h4>Fully Licensed, Bonded, and Insured</h4>
     </div>
     <div class="span1-3 footer-phone">
       <div class="desktoptel">
@@ -20,10 +25,7 @@
     </div>
   </div>
   <div class="group sub-footer">
-    <div class="span1-2">
-      <p class="extra-small">Check or cash preferred. Credit card payments will incur standard processing fees.</p>
-    </div>
-    <div class="span1-2">
+    <div class="span1-1">
       <p class="copyright">
         &copy;
         <script type="text/javascript">
