--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -47,6 +47,11 @@
   }
 }
 
+.aff-logo {
+  max-width: 400px;
+  width: 90%;
+}
+
 // Column Section -------------------------------------
 .column-section {
   margin: 6em 0 4em;
