Icomoon and footer icons

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,7 +13,8 @@
       </div>
     </div>
     <div class="span1-3 licensing">
-      <h4>Fully Licensed, Bonded, and Insured</h4>
+      <img src="/images/licensed.png">
+      <img src="/images/bbb.png">
     </div>
     <div class="span1-3 footer-phone">
       <div class="desktoptel">
