--- a/_includes/contact_form.html
+++ b/_includes/contact_form.html
@@ -12,6 +12,11 @@
     <input type="tel" id="contact-phone" name="phone" />
   </div>
   <div class="field">
+    <label for="contact-service">Type of Request</label>
+    <input type="radio" name="service-type" value="residential" />Residential
+    <input type="radio" name="service-type" value="commercial" />Commercial
+  </div>
+  <div class="field">
     <label for="contact-message">Message</label>
     <textarea id="contact-message" name="message"></textarea>
   </div>
